[package]
name = "car-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"
rand = "0.8.5"
vin = "1.0.0"
chrono = "0.2.16"